--- a/gb/17/7/13/n9389561.md
+++ b/gb/17/7/13/n9389561.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tofjt245/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tofjt245/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tofjt245/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tofjt245/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tofjt245/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tofjt245/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tofjt245/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tofjt245/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tofjt245/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tofjt245/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tofjt245/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tofjt245/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tofjt245/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>蔬果精粹 鱼乐环保清洁剂</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/07/fe547a703f23f526b06ebcf146b56613-600x400.jpg" />
 <h6>“鱼乐”去油、去污及分解农药的机制，是大自然原具足的洁净力，“自然的最安全”，在鱼乐的配方上，得到了最佳印证。（大纪元制图）
 </h6>
 <hr>
-<p>【大纪元2017年07月13日讯】?（大纪元记者潘欣琪、陈莹聪台湾台北报导）当年轻的研发者提及用“<ahref="https://github.com/tofjt245/djy/blob/master/gb/tag/%E9%B1%BC%E4%B9%90.md#1">鱼乐</a>”<ahref="https://github.com/tofjt245/djy/blob/master/gb/tag/%E6%B4%97%E6%B4%81.md#1">洗洁</a>剂清洗一棵枯萎的小树，竟然让它恢复生机，也让捡来的癞痢狗皮毛健康亮丽，听了自然也让人心向往！</p>
+<p>【大纪元2017年07月13日讯】?（大纪元记者潘欣琪、陈莹聪台湾台北报导）当年轻的研发者提及用“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%B1%BC%E4%B9%90.md#1">鱼乐</a>”<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B4%97%E6%B4%81.md#1">洗洁</a>剂清洗一棵枯萎的小树，竟然让它恢复生机，也让捡来的癞痢狗皮毛健康亮丽，听了自然也让人心向往！</p>
 <p><strong>本质好！</strong><br />
-<strong>一瓶就足够满足不同<ahref="https://github.com/tofjt245/djy/blob/master/gb/tag/%E6%B4%97%E6%B4%81.md#1">洗洁</a>需求</strong></p>
+<strong>一瓶就足够满足不同<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B4%97%E6%B4%81.md#1">洗洁</a>需求</strong></p>
 <p>市面上，什么样的洗洁液才称得上好？妈妈们一致认为，不含石化原料才能真的让人安心；更多的人说，要有洗净效果才是好物；小鱼想说，让我在溪里快乐悠游，才是最棒的！专业研发者说，只要了解不同植物蔬果的自然洗净特质，再抓出精准比例，调配出的配方，清洁力、分解力互搭互补，洗净的效果就能够全力发挥，因为洗净的本质好，所以，只需要一瓶就足够让居家生活全面洁净。</p>
-<p><ahref="https://github.com/tofjt245/djy/blob/master/gb/tag/%E9%B1%BC%E4%B9%90.md#1">鱼乐</a>环保多功能洗洁液，高于环保标章的高生物分解度，用严谨的态度，为生活提供真正无负担的洁净，当然能够同步满足不一样的需求！</p>
-<figure id="attachment_9426001" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-9426001 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/07/f599ce6c761962973110a2c568ac61c2-450x301.jpg" alt="鱼乐多功能洗洁液，不含石化原料，洁净去污效果好，洗后不残留。（纪元国际提供）" width="450" b="301" /><figcaption class="wp-caption-text">鱼乐多功能洗洁液，不含石化原料，洁净去污效果好，洗后不残留。（纪元国际提供）</figcaption></figure>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%B1%BC%E4%B9%90.md#1">鱼乐</a>环保多功能洗洁液，高于环保标章的高生物分解度，用严谨的态度，为生活提供真正无负担的洁净，当然能够同步满足不一样的需求！</p>
+<figure id="attachment_9426001" aria-describedby="caption-attachment-9426001" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/f599ce6c761962973110a2c568ac61c2-450x301.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9426001 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/07/f599ce6c761962973110a2c568ac61c2-450x301.jpg" alt="鱼乐多功能洗洁液，不含石化原料，洁净去污效果好，洗后不残留。（纪元国际提供）" width="450" b="301" /></a><figcaption id="caption-attachment-9426001" class="wp-caption-text">鱼乐多功能洗洁液，不含石化原料，洁净去污效果好，洗后不残留。（纪元国际提供）</figcaption></figure>
 <p><strong>居家洗洁 恼人的事 通通交给鱼乐</strong></p>
 <p>1.“小强”来了，麻烦也跟着来，但别担心，用鱼乐稀释液（1:10）直接喷在小强腹部，小强腹部的油脂层被分解了，除蟑的效果一级棒！平时也可以用鱼乐稀释液擦地板，预防虫蚁蟑螂！</p>
 <p>2.大扫除最讨厌的事是冷气内部洗不到，只要用鱼乐稀释液（1:5）直接喷滤网或内部脏污处，一段时间后脏污自然分解流出，一点也不费力。</p>
@@ -20,10 +20,10 @@
 <p>5.厨房排油烟机、流理台重油污用鱼乐稀释液（1:3）直接喷，静待一段时间，油污分解清洗后，就像新的一样。</p>
 <p>6.手洗衣物脏污、污渍，用鱼乐稀释液（1:4），浸泡一会儿，分解效果好，衣物恢复如新。且不伤手。</p>
 <p>7.蔬果农药，怎么洗？用鱼乐稀释液（1:5）浸泡一会儿，油脂性的农药残留就被分解，再用清水洗净，一家人的饮食健康没负担。</p>
-<figure id="attachment_9389599" style="width: 500px" class="wp-caption aligncenter"><img class="size-full wp-image-9389599" src="https://i.epochtimes.com/assets/uploads/2017/07/^164F84A29FC64662F7A1B5F4180081351B5E4CB710A5235C93^pimgpsh_fullsize_distr-e1499938122327.jpg" alt="鱼乐多功能洗洁液，稀释比例参考表。（大纪元制图）" width="500" b="510" /><figcaption class="wp-caption-text">鱼乐多功能洗洁液，稀释比例参考表。（大纪元制图）</figcaption></figure>
+<figure id="attachment_9389599" aria-describedby="caption-attachment-9389599" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/^164F84A29FC64662F7A1B5F4180081351B5E4CB710A5235C93^pimgpsh_fullsize_distr-e1499938122327.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-9389599" src="https://i.epochtimes.com/assets/uploads/2017/07/^164F84A29FC64662F7A1B5F4180081351B5E4CB710A5235C93^pimgpsh_fullsize_distr-e1499938122327.jpg" alt="鱼乐多功能洗洁液，稀释比例参考表。（大纪元制图）" width="500" b="510" /></a><figcaption id="caption-attachment-9389599" class="wp-caption-text">鱼乐多功能洗洁液，稀释比例参考表。（大纪元制图）</figcaption></figure>
 <p><strong>加入“鱼乐”行列 给宝贝希望的未来</strong></p>
 <p>跟鱼儿玩在一块的欢乐与感动，已成为人心向往的梦想，自然无害环保洗洁剂－《鱼乐》系列产品，用良心与品质平衡人与自然的关系，也邀请更多的消费者，认识鱼乐、使用鱼乐、爱用鱼乐，坚定的加入让鱼快乐的行列！共享“鱼儿乐悠游”的美好！</p>
-<figure id="attachment_9425994" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-9425994 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/07/b8f84212892f38dd3ad4df636f94e868-450x720.jpg" alt="鱼乐多功能洗洁液，“零添加”回归自然洗洁的本质。（大纪元制图）" width="450" b="720" /><figcaption class="wp-caption-text">鱼乐多功能洗洁液，“零添加”回归自然洗洁的本质。（大纪元制图）</figcaption></figure>
+<figure id="attachment_9425994" aria-describedby="caption-attachment-9425994" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/b8f84212892f38dd3ad4df636f94e868-450x720.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9425994 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/07/b8f84212892f38dd3ad4df636f94e868-450x720.jpg" alt="鱼乐多功能洗洁液，“零添加”回归自然洗洁的本质。（大纪元制图）" width="450" b="720" /></a><figcaption id="caption-attachment-9425994" class="wp-caption-text">鱼乐多功能洗洁液，“零添加”回归自然洗洁的本质。（大纪元制图）</figcaption></figure>
 <p><strong>纪元国际事业股份有限公司</strong><br />
 订购电话：0800-666-015<br />
 鱼乐官网：<ahref="https://www.epochmall.com/" target="_blank" rel="noopener noreferrer">https://www.epochmall.com/</a></p>
@@ -34,42 +34,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/7/n12090191.md#1">制造业纾困已核发逾7亿 金属机电业为大宗</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/6/n12087797.md#1">功率半导体晶圆厂支出 SEMI：估下半年复苏</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/6/n12087640.md#1">台电取得绿电执照 年供电8.4亿度</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/5/n12084724.md#1">PC第2季能见度佳 服务器供应链回稳</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/5/n12084795.md#1">2019年制造业 投资研发创近5年新高</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/4/29/n12070332.md#1">营收衰退 宝成拟砍高阶主管薪1至3成</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/4/28/n12067520.md#1">口罩产能再增 沈荣津：5月达1,900万片</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/4/28/n12067403.md#1">台糖推加油现金回馈 50公升现抵100元</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/4/26/n12062290.md#1">联华电子后悔进大陆设厂 学者：掉入圈套</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/4/21/n12049222.md#1">台IT厂3月营收增1.6% 日经：前景仍不明</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689138.md#1">英特尔执行长年薪51亿 为一般员工1711倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689133.md#1">2050绿能占逾6成 台经长：是大挑战</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686171.md#1">台电风险管理 立委吁公开资料让民间协助</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683334.md#1">台泥、亚泥提前布局2050减碳方针</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13678990.md#1">中钢钢化联产 立委批：台湾投资帮中国减碳</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13678749.md#1">台积电高雄设厂通过初审 环团吁“自带绿电”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13672905.md#1">台麦当劳、家乐福响应减碳 今关招牌灯1小时</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/24/n13669933.md#1">辉达有意找英特尔代工 陆行之：想对台积电压价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/24/n13669907.md#1">准放火罪查办303停电 王美花：尊重检调调查</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/23/n13667579.md#1">台船承造 第11艘百吨级巡防艇下水</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/10/n9943237.md#1" target="_blank">林辉：上了中共当的“一二九”学生运动</a></li><li><a href="https://github.com/tofjt245/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403596.md#1" target="_blank">澳纽正义之声汇入全球反迫害之洪势</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/18/n10313172.md#1" target="_blank">孙陇：文革中张国柱一家的自杀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/29/n7787098.md#1" target="_blank">81岁病危老人一夜之间病好了</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/6/n12087962.md#1">中共领导人长命之谜 靠的是什么？</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/7/n12089308.md#1">对抗中共肺炎逾百日 陈时中坦言有“三大失算”</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/6/n12087990.md#1">【新闻看点】中共鹰派突变调 承认攻台两大困境</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/7/n12089087.md#1">中共长征五号升空 充气返回舱试验失败</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/6/n12088248.md#1">全球调查 专家：中共高层忧“世纪之罪”曝光</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/5/n12085409.md#1">传遭官方禁止直播卖货 范冰冰公开回应</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/7/n12089652.md#1">崔智友临盆在即 疫情中为高龄产妇加油</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/6/n12088319.md#1">《战狼》片方高管内讧 原副董事长出逃海外</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/6/n12088665.md#1">张达明历经九年抗癌路 首夺金像奖最佳男配角</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/5/n12084156.md#1">詹子晴32岁总资产上千万 靠2招成副业女王</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/5/n12083937.md#1">美国女童写信给在天堂的小狗 意外收到回信</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/4/n12082623.md#1">唐朝进士奇闻：耳朵里的天国世界</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/4/25/n12061145.md#1">赵盾一梦“兆绝后好” 满门被灭 孤儿独好</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/6/n12087072.md#1">募款4千万美元 英百岁翁收到15万张生日贺卡</a></li>
-<li><a href="https://github.com/tofjt245/djy/blob/master/gb/20/5/3/n12079653.md#1">【爱丽话五千】古代医书里的各种防疫奇招</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tofjt245/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tofjt245/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/13/n9389561.htm">蔬果精粹 鱼乐环保清洁剂</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/13/n9389561.htm">蔬果精粹 鱼乐环保清洁剂</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tofjt245/djy/blob/master/gb/17/7/13/n9389561.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tofjt245/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tofjt245/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tofjt245/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tofjt245/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tofjt245/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/7/13/n9389561.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
